# jReleaser-for-proto-code-gen

./: .gitignore  .sdkmanrc  README.md  aqua-checksums.json  aqua.yaml  go.mod  jreleaser.yml  manage.go  pom.xml  settings.xml
.cargo/: config.toml  credentials.toml
.github/workflows/: release-on-tag.yml  release.yml
hello/: pom.xml
hello/go/v1/: go.mod  hello.pb.go  hello_grpc.pb.go
hello/rust/: Cargo.toml  build.rs
hello/rust/src/: lib.rs
hello/src/main/protobuf/: hello.proto
services-parent/: generate-setup.py  pom.xml  setup.py.template
services-parent/go/v1/: go.mod
