[package]
name = "hello"
version = "1.0.2"
edition = "2021"
description = "Hello"
build = "build.rs"
include = [
    "src/**",
    "proto/**",
    "build.rs",
    "Cargo.toml",
]
license = "MIT" # or "Apache-2.0", "proprietary", etc.
repository = "https://github.com/RohitRed19/jReleaser-for-proto-code-gen.git"
publish = ["nexus"]

[dependencies]
tonic = "0.14.2"
tonic-health = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread"
] }
[build-dependencies]
tonic-prost-build = "0.14.2"